--- a/Servidor-Estatico/package.json
+++ b/Servidor-Estatico/package.json
@@ -5,11 +5,15 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch serverTCP.js",
-    "dev2": "node --watch serverHTTP.js"
+    "dev1": "node --watch serverTCP.js",
+    "dev2": "node --watch serverHTTP.js",
+    "dev": "node --watch index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "mime-types": "^2.1.35"
+  }
 }
