--- a/Servidor-Estatico/package.json
+++ b/Servidor-Estatico/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-modules --experimental-vm-modules node_modules/jest/bin/jest.js",
     "dev1": "node --watch serverTCP.js",
     "dev2": "node --watch serverHTTP.js",
     "dev": "node --watch index.js"
@@ -15,5 +15,8 @@
   "description": "",
   "dependencies": {
     "mime-types": "^2.1.35"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
